Sun May 13 04:40:10 2001  George Lebl <jirka@5z.com>

	* gui/gdmlogin.c: Add a tooltip to the iconify arrow

Sun May 13 04:36:14 2001  George Lebl <jirka@5z.com>

	* daemon/gdmlogin.c: recenter windows when they resize, add a single
	  black line decoration to make it easy to distinguish windows
	  layered on top of each other (such as in the configurator)

Sun May 13 00:59:48 2001  George Lebl <jirka@5z.com>

	* AUTHORS, NEWS, README: updated

	* Makefile.am, RELEASENOTES: removed, no longer needed and horribly
	  useless and confusing to users

Sat May 12 23:44:38 2001  George Lebl <jirka@5z.com>

	* configure.in: add configuration summary, fix libwrap detection
	  and add configuration options to enable/disable xinerama
	  tcpwrappers and choose the authentication scheme

	* daemon/verify-crypt.c, daemon/verify-shadow.c:  don't ask for
	  passwords on passwordless logins, fix a leak, and make crypt
	  support actually compile.  Also check password before testing if
	  the account is disabled.

	* daemon/slave.c:  Focus first X window with res_name "xterm" when
	  running the failsafe xterm session

Sat May 12 19:32:31 2001  George Lebl <jirka@5z.com>

	* configure.in: when we don't find the wrappers library don't add
	  it to LIBS

Sat May 12 19:28:30 2001  George Lebl <jirka@5z.com>

	* gui/gdmlogin.c, gui/gdmconfig.c: Add .dpkg-old to the list of
	  extentions to ignore

Sat May 12 16:47:18 2001  George Lebl <jirka@5z.com>

	* config/Xsession: check for freetemp existing

Sat May 12 15:23:50 2001  George Lebl <jirka@5z.com>

	* gui/gdmlogin.c: properly check for NULLs on cursess and curlang.
	  Never, NEVER make the default session the last session, shit, the
	  entire point of that would not work, there is no Last session when
	  you use the default (that's the whole idea:).  Be more anal on the
	  language stuff as well, avoiding possible cases of crashing and
	  warnings.

Thu May 10 00:29:06 2001  George Lebl <jirka@5z.com>
